@@ -16,10 +16,11 @@ import com.github.idemura.cimple.compiler.ast.AstTypeFunction;
 import com.github.idemura.cimple.compiler.ast.AstTypeStruct;
 import com.github.idemura.cimple.compiler.ast.AstTypeUnion;
 import com.github.idemura.cimple.compiler.ast.AstVariable;
+import com.github.idemura.cimple.compiler.ast.QualifiedName;
 import com.github.idemura.cimple.compiler.ast.TypeRef;
 import com.github.idemura.cimple.compiler.ast.UnionVariant;
 import com.github.idemura.cimple.compiler.tokens.Tokenizer;
-import java.util.List;
+import com.google.common.collect.ImmutableList;
 import org.junit.jupiter.api.Test;
 
 class ParserTest {
@@ -36,17 +37,17 @@ class ParserTest {
   void testModule() {
     var module = parseFile("/parser/global_defs.ci");
     assertEquals("base_test", module.getName());
-    var functions = module.getFunctions();
+    var functions = module.functions();
     assertEquals(4, functions.size());
     {
       var f = functions.get(0);
-      assertEquals("f0", f.getHeader().getName());
+      assertEquals(new QualifiedName("f0"), f.getHeader().getName());
       assertNull(f.getHeader().getResultType());
-      assertEquals(List.of(), f.getHeader().getParameters());
+      assertEquals(ImmutableList.of(), f.getHeader().getParameters());
     }
     {
       var f = functions.get(1);
-      assertEquals("f1", f.getHeader().getName());
+      assertEquals(new QualifiedName("f1"), f.getHeader().getName());
       assertNull(f.getHeader().getResultType());
       var params = f.getHeader().getParameters();
       assertEquals(1, params.size());
@@ -54,7 +55,7 @@ class ParserTest {
     }
     {
       var f = functions.get(2);
-      assertEquals("f2", f.getHeader().getName());
+      assertEquals(new QualifiedName("f2"), f.getHeader().getName());
       assertNull(f.getHeader().getResultType());
       var params = f.getHeader().getParameters();
       assertEquals(2, params.size());
@@ -63,25 +64,25 @@ class ParserTest {
     }
     {
       var f = functions.get(3);
-      assertEquals("r", f.getHeader().getName());
+      assertEquals(new QualifiedName("r"), f.getHeader().getName());
       assertEquals(TypeRef.ofName("int"), f.getHeader().getResultType());
-      assertEquals(List.of(), f.getHeader().getParameters());
+      assertEquals(ImmutableList.of(), f.getHeader().getParameters());
     }
-    var variables = module.getVariables();
+    var variables = module.variables();
     assertEquals(3, variables.size());
     {
       var v = variables.get(0);
-      assertEquals("v0", v.getName());
+      assertEquals(new QualifiedName("v0"), v.getName());
       assertEquals(TypeRef.ofName("int"), v.getTypeRef());
     }
     {
       var v = variables.get(1);
-      assertEquals("v1", v.getName());
+      assertEquals(new QualifiedName("v1"), v.getName());
       assertEquals(TypeRef.ofName("int"), v.getTypeRef());
     }
     {
       var v = variables.get(2);
-      assertEquals("v2", v.getName());
+      assertEquals(new QualifiedName("v2"), v.getName());
       assertNull(v.getTypeRef());
     }
   }
@@ -90,54 +91,54 @@ class ParserTest {
   void testTypes() {
     var module = parseFile("/parser/types.ci");
     assertEquals("type_test", module.getName());
-    var types = module.getTypes();
+    var types = module.types();
     assertEquals(7, types.size());
     int i = 0;
     {
       var type = (AstTypeStruct) types.get(i++);
-      assertEquals("Empty", type.getName());
-      assertEquals(List.of(), type.getFields());
+      assertEquals(new QualifiedName("Empty"), type.getName());
+      assertEquals(ImmutableList.of(), type.getFields());
     }
     {
       var type = (AstTypeStruct) types.get(i++);
-      assertEquals("Point", type.getName());
+      assertEquals(new QualifiedName("Point"), type.getName());
       var fields = type.getFields();
       assertEquals(3, fields.size());
       int j = 0;
       {
         var f = fields.get(j++);
-        assertEquals("x", f.getName());
+        assertEquals(new QualifiedName("x"), f.getName());
         assertEquals(TypeRef.ofName("int"), f.getTypeRef());
         assertTrue(f.getBit(AstVariable.MUTABLE));
       }
       {
         var f = fields.get(j++);
-        assertEquals("y", f.getName());
+        assertEquals(new QualifiedName("y"), f.getName());
         assertEquals(TypeRef.ofName("int"), f.getTypeRef());
         assertTrue(f.getBit(AstVariable.MUTABLE));
       }
       {
         var f = fields.get(j++);
-        assertEquals("name", f.getName());
+        assertEquals(new QualifiedName("name"), f.getName());
         assertEquals(TypeRef.ofName("string"), f.getTypeRef());
         assertFalse(f.getBit(AstVariable.MUTABLE));
       }
     }
     {
       var type = (AstTypeAlias) types.get(i++);
-      assertEquals("Uri", type.getName());
+      assertEquals(new QualifiedName("Uri"), type.getName());
       assertEquals(TypeRef.ofName("string"), type.getBaseTypeRef());
     }
     {
       var type = (AstTypeUnion) types.get(i++);
-      assertEquals("Option", type.getName());
+      assertEquals(new QualifiedName("Option"), type.getName());
       assertEquals(
-          List.of(unionVariant("None", null), unionVariant("Some", "string")),
+          ImmutableList.of(unionVariant("None", null), unionVariant("Some", "string")),
           type.getVariants());
     }
     {
       var type = (AstTypeFunction) types.get(i++);
-      assertEquals("Compare", type.getName());
+      assertEquals(new QualifiedName("Compare"), type.getName());
       assertEquals(TypeRef.ofName("bool"), type.getHeader().getResultType());
       var params = type.getHeader().getParameters();
       assertEquals(2, params.size());
@@ -146,24 +147,24 @@ class ParserTest {
     }
     {
       var type = (AstTypeFunction) types.get(i++);
-      assertEquals("Supplier", type.getName());
+      assertEquals(new QualifiedName("Supplier"), type.getName());
       assertEquals(TypeRef.ofName("string"), type.getHeader().getResultType());
-      assertEquals(List.of(), type.getHeader().getParameters());
+      assertEquals(ImmutableList.of(), type.getHeader().getParameters());
     }
     {
       var type = (AstTypeFunction) types.get(i++);
-      assertEquals("Consumer", type.getName());
+      assertEquals(new QualifiedName("Consumer"), type.getName());
       assertNull(type.getHeader().getResultType());
-      assertEquals(List.of(parameter("v", "string")), type.getHeader().getParameters());
+      assertEquals(ImmutableList.of(parameter("v", "string")), type.getHeader().getParameters());
     }
   }
 
   @Test
   void testIfStatement() {
     var module = parseFile("/parser/statements.ci");
-    var function = module.getFunctions().get(0);
-    assertEquals("f", function.getHeader().getName());
-    var statements = function.getBlock().getStatements();
+    var function = module.functions().get(0);
+    assertEquals(new QualifiedName("f"), function.getHeader().getName());
+    var statements = function.getBlock().statements();
     assertEquals(3, statements.size());
     int i = 0;
     {
@@ -193,9 +194,9 @@ class ParserTest {
   @Test
   void testForStatement() {
     var module = parseFile("/parser/statements.ci");
-    var function = module.getFunctions().get(1);
-    assertEquals("g", function.getHeader().getName());
-    var statements = function.getBlock().getStatements();
+    var function = module.functions().get(1);
+    assertEquals(new QualifiedName("g"), function.getHeader().getName());
+    var statements = function.getBlock().statements();
     assertEquals(3, statements.size());
     int i = 0;
     {
@@ -203,29 +204,29 @@ class ParserTest {
       assertNull(stmtFor.getInit());
       assertEquals(new AstNameRef("true"), stmtFor.getCondition());
       assertNull(stmtFor.getIncrement());
-      var bodyStatements = stmtFor.getBlock().getStatements();
+      var bodyStatements = stmtFor.getBlock().statements();
       assertEquals(1, bodyStatements.size());
       assertEquals(new AstGoto("end"), bodyStatements.get(0));
     }
     {
       var stmtFor = (AstFor) statements.get(i++);
       var init = stmtFor.getInit();
-      assertEquals("i", init.getName());
+      assertEquals(new QualifiedName("i"), init.getName());
       assertNull(init.getTypeRef());
       assertEquals(AstLiteral.ofInt(0), init.getExpression());
       assertEquals(new AstNameRef("true"), stmtFor.getCondition());
       assertNull(stmtFor.getIncrement());
-      assertEquals(List.of(), stmtFor.getBlock().getStatements());
+      assertEquals(ImmutableList.of(), stmtFor.getBlock().statements());
     }
     {
       var stmtFor = (AstFor) statements.get(i++);
       var init = stmtFor.getInit();
-      assertEquals("i", init.getName());
+      assertEquals(new QualifiedName("i"), init.getName());
       assertNull(init.getTypeRef());
       assertEquals(AstLiteral.ofInt(0), init.getExpression());
       assertEquals(new AstNameRef("true"), stmtFor.getCondition());
       assertEquals(new AstNameRef("i"), stmtFor.getIncrement());
-      assertEquals(List.of(), stmtFor.getBlock().getStatements());
+      assertEquals(ImmutableList.of(), stmtFor.getBlock().statements());
     }
   }
 
@@ -269,10 +270,9 @@ class ParserTest {
   @Test
   void testDeferStatement() {
     var module = parseFile("/parser/statements.ci");
-    var function = module.getFunctions().get(2);
-    assertEquals("d", function.getHeader().getName());
-    var statements = function.getBlock().getStatements();
-    assertEquals(1, statements.size());
+    var function = module.functions().get(2);
+    assertEquals(new QualifiedName("d"), function.getHeader().getName());
+    var statements = function.getBlock().statements();
     {
       var stmtDefer = (AstDefer) statements.get(0);
       assertEquals(new AstNameRef("value"), stmtDefer.getExpression());
